--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simplifies the configuration and setup of map services with the WebWorldWind 3D globe",
   "main": "lib/MapService.js",
   "scripts": {
-    "prepublish": "node_modules/babel-cli/bin/babel.js src --out-dir lib"
+    "dev": "webpack --mode development ./src/MapService.js",
+    "build": "webpack --mode production ./src/MapService.js"
   },
   "repository": {
     "type": "git",
@@ -27,13 +28,10 @@
     "url-parse": "^1.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3"
   }
 }
