--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simplifies the configuration and setup of map services with the WebWorldWind 3D globe",
   "main": "src/MapService.js",
   "scripts": {
-    "dev": "webpack --mode development ./src/MapService.js",
+    "test": "npm run dev && karma start",
+    "dev": "webpack --mode development ./src/MapService.js --module-bind js=babel-loader",
     "build": "webpack --mode production ./src/MapService.js"
   },
   "repository": {
@@ -31,6 +32,13 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.2",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.2",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-requirejs": "^1.1.0",
+    "requirejs": "^2.3.5",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
   }
