--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "description": "Simplifies the configuration and setup of map services with the WebWorldWind 3D globe",
   "main": "src/MapService.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zglueck/worldwind-map-service.git"
@@ -21,10 +20,20 @@
   },
   "homepage": "https://github.com/zglueck/worldwind-map-service#readme",
   "dependencies": {
+    "@nasaworldwind/worldwind": "^0.9.0",
     "query-string": "^6.1.0",
     "url-parse": "^1.4.0"
   },
   "peerDependencies": {
     "@nasaworldwind/worldwind": "^0.9.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^23.0.1",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.1.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3"
   }
 }
