--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Simplifies the configuration and setup of map services with the WebWorldWind 3D globe",
   "main": "src/MapService.js",
   "scripts": {
-    "test": "node_modules/jest/bin/jest.js"
+    "test": "node_modules/jest/bin/jest.js",
+    "dev": "webpack --mode development ./src/MapService.js --module-bind js=babel-loader",
+    "build": "webpack --mode production ./src/MapService.js"
   },
   "repository": {
     "type": "git",
